--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".fragment.TaskFragment"
     android:id="@+id/fragment_task">
@@ -126,8 +126,6 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:paddingRight="5dp"
-            android:paddingLeft="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyclerView"
