--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -4,15 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="8dp"
-    android:background="@android:color/white"
+    android:layout_marginTop="8dp"
+    android:layout_marginHorizontal="8dp"
     >
 
     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:cardElevation="10dp"
-
+        card_view:cardElevation="15dp"
+        card_view:cardCornerRadius="10dp"
+        card_view:cardBackgroundColor="@android:color/white"
         >
 
         <LinearLayout
