--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -14,22 +14,27 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         card_view:cardElevation="15dp"
-        card_view:cardCornerRadius="10dp"
+
         card_view:cardBackgroundColor="@android:color/white"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <TextView
+            android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+            <EditText
                 android:id="@+id/taskContent"
                 android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="9"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="0dp" />
+                android:layout_width="0dp"
+                android:background="@null"
+
+                />
             <CheckBox
                 android:id="@+id/check_box"
                 android:layout_weight="1"
