--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -24,7 +24,7 @@
             android:orientation="horizontal"
             android:focusable="true"
             android:focusableInTouchMode="true">
-            <EditText
+            <TextView
                 android:id="@+id/taskContent"
                 android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
