--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.EditTaskActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
+    <EditText
         android:id="@+id/date"
-        android:background="@drawable/edit_task"
-        android:layout_margin="20dp" />
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="20dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:background="@drawable/edit_task" />
+
+
 
       <EditText
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginTop="50dp"
-      android:layout_marginLeft="20dp"
-      android:layout_marginRight="20dp"
-          android:layout_marginBottom="20dp"
-          android:background="@drawable/add_task"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+          android:layout_marginRight="20dp"
+          android:layout_marginLeft="20dp"
           android:inputType="textMultiLine"
           android:id="@+id/task_edit"
+          android:gravity="start"
+          android:background="@drawable/add_task"
+
           />
 
 
-  </RelativeLayout>
+  </LinearLayout>
