--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -5,10 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context=".fragment.TaskFragment"
-    android:id="@+id/fragment_task">
+    tools:context=".fragment.TaskFragment">
 
     <RelativeLayout
         android:id="@+id/rl_tool"
@@ -126,6 +125,8 @@
 
 
         <android.support.v7.widget.RecyclerView
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyclerView"
