--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -1,56 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginHorizontal="8dp"
-    >
+    android:orientation="horizontal">
 
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        card_view:cardElevation="15dp"
-
-        card_view:cardBackgroundColor="@android:color/white"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
-            <EditText
-                android:id="@+id/taskContent"
-                android:layout_marginLeft="16dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="9"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:layout_width="0dp"
-                android:background="@null"
-
-                />
-            <CheckBox
-                android:id="@+id/check_box"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:focusable="false"
-                android:layout_width="0dp" />
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/taskContent"
+            android:layout_weight="9"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_width="0dp" />
+        <CheckBox
+            android:id="@+id/check_box"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:focusable="false"
+            android:layout_width="0dp" />
 
 
 
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 
