--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#94A3F4</color>
-    <color name="colorPrimaryDark">#6A5ACD</color>
-    <color name="colorAccent">#F8931D</color>
-    <color name="transparent">#50000000</color>
+    <color name="colorPrimaryDark">#94A3F4</color>
+    <color name="colorAccent">#D81B60</color>
 </resources>
