--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#F8931D</color>
     <color name="divideLine">#AAAAAA</color>
     <color name="background">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="sliverWhite">#DCDCDC</color>
 </resources>
