绘制含有task的日期

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="background">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="sliverWhite">#DCDCDC</color>
+    <color name="item_checked">#c0c0c0</color>
 </resources>
