--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -57,18 +57,20 @@
             android:layout_height="1dp"
             android:background="@color/sliverWhite"/>
 
-        <EditText
-            android:id="@+id/task_detail"
-            android:hint="任务描述"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:inputType="textMultiLine"
-            android:layout_marginVertical="16dp"/>
+
 
     </LinearLayout>
 
-
+    <EditText
+        android:id="@+id/task_detail"
+        android:hint="任务描述"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:gravity="start"
+        android:inputType="textMultiLine"
+        android:layout_marginVertical="16dp"
+        android:layout_marginHorizontal="16dp"/>
 
 
   </LinearLayout>
