--- a/app/src/main/res/menu/activity_edit_task.xml
+++ b/app/src/main/res/menu/activity_edit_task.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/share_task"
-        android:icon="@drawable/ic_share_white_24dp"
-        android:title="分享"
+        android:id="@+id/edit_done"
+        android:icon="@drawable/finish"
+        android:title="确认"
         app:showAsAction="ifRoom"></item>
 
     <item
