--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,6 +6,128 @@
     tools:context=".fragment.SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:orientation="vertical">
 
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="130dp"
+         android:orientation="vertical">
+         <TextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="个人中心"
+             android:textSize="25sp"
+             android:background="#ADD8E6"/>
+
+         <Button
+             android:id="@+id/LoginButton"
+             android:layout_width="200dp"
+             android:layout_height="80dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginBottom="10dp"
+             android:layout_marginLeft="100dp"
+             android:text="登录/注册"
+             android:textColor="#FFFFFF"
+             android:textSize="30sp"
+
+            />
+     </LinearLayout>
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="60dp"
+         android:orientation="horizontal"
+         >
+         <ImageView
+             android:layout_width="100dp"
+             android:layout_height="wrap_content"
+             android:src="@drawable/message"
+             android:clickable="false"/>
+         <TextView
+             android:id="@+id/MessageCenter"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="消息中心"
+             android:textSize="25sp"
+             android:layout_marginTop="15dp"
+             android:clickable="true"
+           />
+
+     </LinearLayout>
+
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="60dp"
+         android:orientation="horizontal">
+         <ImageView
+             android:layout_width="100dp"
+             android:layout_height="wrap_content"
+             android:src="@drawable/themes"/>
+         <TextView
+             android:id="@+id/Model"
+             android:layout_width="120dp"
+             android:layout_height="wrap_content"
+             android:text="主题切换"
+             android:textSize="25sp"
+             android:layout_marginTop="15dp"
+             android:clickable="true"/>
+
+
+     </LinearLayout>
+
+     <LinearLayout
+     android:layout_width="match_parent"
+     android:layout_height="60dp"
+     android:orientation="horizontal"
+     >
+     <ImageView
+         android:layout_width="100dp"
+         android:layout_height="wrap_content"
+         android:src="@drawable/about"
+         android:clickable="false"/>
+     <TextView
+         android:id="@+id/aboutus"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:text="关于我们"
+         android:textSize="25sp"
+         android:layout_marginTop="15dp"
+         android:clickable="true"/>
+
+ </LinearLayout>
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="60dp"
+         android:orientation="horizontal"
+         >
+         <ImageView
+             android:layout_width="100dp"
+             android:layout_height="wrap_content"
+             android:src="@drawable/help"
+             android:clickable="false"/>
+         <TextView
+             android:id="@+id/Help"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="帮助"
+             android:textSize="25sp"
+             android:layout_marginTop="15dp"
+             android:clickable="true"
+           />
+     </LinearLayout>
+     <Button
+         android:id="@+id/ExitButton"
+         android:layout_width="match_parent"
+         android:layout_height="60dp"
+
+         android:textColor="#000000"
+         android:text="退出登录"
+         android:layout_marginTop="20dp"
+         android:textSize="25sp"
+
+         />
+ </LinearLayout>
 
 </FrameLayout>
